--- a/main.css
+++ b/main.css
@@ -77,6 +77,7 @@
     grid-template-columns: 620px 340px;
     margin-top: 15px;
 }
+/* ===CONTENT-LEFT=== */
 .content-banner img{
     width: 625px;
     height: 350px;
@@ -141,6 +142,48 @@
 .tintuc-noidung a h4:hover{
     color: #19707e;
 }
+.story-tintuc-left{
+    margin-top: 80px;
+}
+.news-col{
+    display: grid;
+    grid-template-columns: 160px 455px;
+    margin-top: 15px;
+}
+.banner-news-left img{
+    width: 155px;
+    height: 103px;
+    border-radius: 5px;
+}
+.news-left-thongtin{
+    margin-left: 10px;
+}
+.thongtin-text a{
+    text-decoration: none;
+    line-height: 28px;
+}
+.thongtin-text a h4{
+    color: #212529;
+    font-weight: 400;
+    font-size: 19px;
+}
+.thongtin-lq img{
+    width: auto;
+    height: 16px;
+    position: relative;
+    top: 3px;
+}
+.thongtin-lq a{
+    text-decoration: none;
+    margin-right: 8px;
+}
+.thongtin-lq span{
+    color: #adb5bd;
+    font-size: 12px;
+    margin-right: 8px;
+
+}
+/* ===CONTENT-RIGHT=== */
 .content-right{
     margin-left: 18px;
 }
@@ -164,6 +207,7 @@
 .story-tintuc-noidung a h4{
     font-size: 17px;
     font-weight: normal;
+    line-height: 22px;
 }
 .story-lq img{
     width: auto;
@@ -175,6 +219,18 @@
     color: #adb5bd;
     font-size: 12px;
     margin-right: 5px;
+}
+.banner-lq-news{
+    margin-top: 15px;
+}
+.story-news-right{
+    padding: 15px 0;
+}
+.story-news-right img{
+    border: 14px solid #f7f7f7;
+}
+.banner-news-right{
+    height: 275px;
 }
 /* ===FOOTER=== */
 footer{
@@ -197,4 +253,54 @@ footer{
     width: 466px;
     height: 34px;
     margin-top: 8px;
+}
+.footer__tagcloud{
+    text-align: justify;
+    margin: 20px 250px 0 250px;
+}
+.footer__tagcloud a{
+    text-decoration: none;
+    color: #6c757d;
+    font-size: 13px;
+    text-transform: capitalize;
+    line-height: 23px;
+}
+.footer-middle{
+    margin: 10px 250px 0 250px;
+    display: block;
+}
+.footer-left{
+    float: left;
+}
+.footer-left h4{
+    font-size: 16px;
+    font-weight: normal;
+    color: #212529;
+}
+.footer-left ul{
+    margin-top: 8px;
+}
+.footer-left ul li{
+    list-style: none;
+    padding: 2px 0;
+}
+.footer-left ul li a{
+    text-decoration: none;
+    font-size: 13px;
+    color: #212529;
+}
+.footer-right{
+    margin-left: 300px;
+    float: left;
+    position: absolute;
+    margin-right: 230px;
+    margin-left: 360px;
+    color: #6c757d;
+}
+.footer-right p{
+    text-align: right;
+    font-size: 12px;
+}
+.clear{
+    clear: both;
 }
